Fix links in index.html to use relative paths
Updated links in the buttons section to point to local files.

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
 			<div class="buttons">
 				
-				<a class="circle" href="../strona/indexx.html" title="Kolumny">Kolumny</a>
+				<a class="circle" href="indexx.html" title="Kolumny">Kolumny</a>
 				<div>
-					<a class="circle" href="../strona/index1.html" title="Galeria">Ogóreczki</a>
+					<a class="circle" href="index1.html" title="Galeria">Ogóreczki</a>
 				</div>
 				<div>
-					<a class="circle" href="../strona/index2.html" title="Formularz">Formularz</a>
+					<a class="circle" href="index2.html" title="Formularz">Formularz</a>
 				</div>
 			</div>
 
@@ -64,5 +64,6 @@
 		</div>
 	</body>
 </html>
+
 
 
