Change form submission alert message
Updated form submission alert message.

--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 	<head>
@@ -9,7 +8,7 @@
 	</head>
 	<body>
 		<h1>Powiedz nam coś o sobie, twoje dane wcale nie będa wykorzystane </h1>
-		<form class="form-container" method="post" action="#" onsubmit="alert('Formularz wysłany (brak backendu)'); return false;">
+		<form class="form-container" method="post" action="#" onsubmit="alert('Yupi mamy twoje dane'); return false;">
 			<label>Imię:<br>
 				<input type="text" name="imie" required>
 			</label>
@@ -64,7 +63,7 @@
 			<br><br>
 
 			<label>Numer telefonu:<br>
-				<input type="tel" name="telefon" pattern="[0-9+\- ]{6,20}" placeholder="+48 123 456 789">
+				<input type="tel" name="telefon" pattern="[0-9+\- ]{6,20}" >
 			</label>
 			<br><br>
 
@@ -102,3 +101,4 @@
 		
 	</body>
 </html>
+				
